# python-training-20220723

./: .gitignore  Pipfile
.docker/: Dockerfile.devenv  settings.json
assault/: Pipfile  readme.md  setup.py
assault/assault/: cli.py  connector.py  http.py
cli_assault/: Pipfile  readme.md
cli_aws/: l01_kaypair.ipynb  l02_boto_basics.ipynb  l03_lambda.ipynb  l03_lambda_create_instance.ipynb
cli_db_backup/: .pdm.toml  docker-compose.yaml  pyproject.toml  readme.ipynb  readme.md
cli_db_backup/db_backup/: __main__.py  config.py  models.py  product_csv.py  product_json.py
cli_scrapy/: .pdm.toml  pyproject.toml  testing.ipynb
cli_scrapy/scraper/: extensions.py  items.py  settings.py
cli_scrapy/scraper/spiders/: dataset.py  dataset_pagination.py  dataset_pagination_json.py  wiki.py
cli_server_check/: .pdm.toml  README.md  pyproject.toml
cli_server_check/src/cli_server_check/: __main__.py  cli.py  http.py
clitool/: README.md  setup.py  testing.ipynb
clitool/src/clitool/: cli.py  export.py  users.py
development/: Pipfile  l00_runnable.py  l01_datatypes_str.ipynb  l02_datatypes_numeric.ipynb  l03_datatypes_other.ipynb  l04_datatypes_sequencetypes.ipynb  l05_conditional.ipynb  l06_loops.ipynb  l07_functions.ipynb  l08_classes.ipynb  l09_packages.ipynb  l10_interaction_with_host.ipynb  l11_functional_programming.ipynb  l12_class_basics.ipynb  l13_debug.ipynb  l14_list_comprehension.ipynb  l15_oop.ipynb  l16_inheritance.ipynb  l17_class_methods.ipynb  l17_methods.ipynb  l18_decorators.ipynb  l19_mutability.ipynb  l20_exceptions.ipynb  l21_serialization.ipynb  l22_system_processes.ipynb  l23_std_tools.ipynb
jupyter/: analysis.ipynb  arrays.ipynb  distribution_dynamic.ipynb  externsl_source.ipynb  matplot.ipynb  panda.ipynb
pdm_cli_app/: pyproject.toml
pgbackup/: README.md  building.txt  setup.py  testing.ipynb
pgbackup/src/pgbackup/: cli.py  pgdump.py  storage.py
python_base_project/: README.md  setup.py
python_pdm_project/: README.md  pyproject.toml
python_toml_project/: README.md  pyproject.toml
python_toml_project/src/python_toml/: __main__.py  a_module.py  b_module.py
pytickets/: __init__.py  config.py  docker-compose.yaml  models.py  readme.md
pytickets/migrations/versions/: 2872a8ef5c97_.py  e0d6853a05dd_.py
pytickets/templates/: tickets_show.html
pywebapp/: __init__.py  build.md  config.py  docker-compose.yaml  models.py
pywebapp/migrations/versions/: 8214f0dc7cb7_.py
pywebapp/templates/: log_in.html
tdd_app/: .pdm.toml  Makefile  pyproject.toml  readme.md
tdd_app/tddapp/: cli.py  tree.py  writer.py
tdd_app/tests/: test_tddapp.py  test_tddapp_fixtures.py  test_tree.py  test_write.py  test_write_fixtures.py
