[project]
name = "db_backup"
version = "0.0.1"
description = "db backup"
authors = [
    {name = "Aivars Smaukstelis", email = "aivars.smaukstelis@gmail.com"},
]
dependencies = [
    "SQLAlchemy>=1.4.39",
    "psycopg2-binary>=2.9.3",
]
requires-python = ">=3.10"

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[project.optional-dependencies]
[tool.pdm.dev-dependencies]
dev = [
    "black>=22.6.0",
    "pylint>=2.14.5",
]