[project]
name = "scrapy-spider"
version = "0.0.1"
description = "Scrapy Spider"
dependencies = [
    "python-dotenv>=0.20.0",
    "scrapy>=2.6.2",
]
requires-python = ">=3.10"

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[project.optional-dependencies]
[tool.pdm.dev-dependencies]
dev = [
    "black>=22.6.0",
    "pylint>=2.14.5",
    "ipython>=8.4.0",
    "ipykernel>=6.15.1",
]