[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[project]
name = "cli_server_check"
version = "0.0.1"
description = "server check"
authors = [
    {name = "Aivars Smaukstelis", email = "aivars.smaukstelis@gmail.com"},
]
dependencies = []
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "black>=22.6.0",
    "pylint>=2.14.5",
]

[project.scripts]
server_check = "cli_server_check.__main__:main"