[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[project]
name = "python_toml"
version = "0.0.1"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "click"
]

[project.scripts]
python_toml = "python_toml.__main__:main"

[project.optional-dependencies]
[tool.pdm.dev-dependencies]
dev = [
    "black>=22.6.0",
    "pylint>=2.14.5",
]
