[project]
name = "tdd-app"
version = ""
description = ""
authors = [
    {name = "user", email = "email"},
]
dependencies = [
    "python-dotenv>=0.20.0",
    "boto3>=1.24.49",
]
requires-python = ">=3.10"
license = {text = "unknown"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[project.optional-dependencies]
[tool.pdm.dev-dependencies]
dev = [
    "black>=22.6.0",
    "pylint>=2.14.5",
    "ipython>=8.4.0",
    "ipykernel>=6.15.1",
]
test = [
    "pytest>=7.1.2",
    "pytest-mock>=3.8.2",
]
